Version 2 || Step 2
record for Employee and Department (Java 16, finalized) — immutable, no boilerplate
Bounded Generics PipelineStage<T> — type-safe, reusable stages
Flexible Constructor Bodies (JEP 513, finalized Java 25) — validate inputs before calling this()/super(), so invalid objects are never half-constructed
Unnamed Variables _ (JEP 456, finalized Java 22) — use _ for catch blocks where the exception variable is unused